--- a/package.json
+++ b/package.json
@@ -4,6 +4,11 @@
   "description": "Remove all comments along the code",
   "version": "0.0.1",
   "author": "Alexandre Trieste - Software Engineer",
+  "publisher": "Alexandre-Trieste",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/alexandretrieste/uncomment"
+  },  
   "engines": {
     "vscode": "^1.80.0"
   },
