--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Remove all comments along the code",
   "version": "0.0.1",
   "author": "Alexandre Trieste - Software Engineer",
-  "publisher": "Alexandre-Trieste",
+  "publisher": "Revolution5.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/alexandretrieste/uncomment"
