--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "uncomment",
   "displayName": "uncomment",
   "description": "Remove all comments along the code",
-  "version": "0.1.0",
+  "version": "1.1.0",
+  "icon": "./favicon.jpg",
   "author": "Alexandre Trieste - Software Engineer",
   "publisher": "Revolution50",
   "repository": {
@@ -13,7 +14,7 @@
     "vscode": "^1.80.0"
   },
   "categories": [
-    "Other"
+    "Formatters"
   ],
   "activationEvents": [
     "onCommand:uncomment.execute"
