--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "uncomment",
   "displayName": "uncomment",
   "description": "Remove all comments along the code",
-  "version": "1.1.7",
-  "icon": "./favicon.jpg",
+  "version": "1.1.8",
+  "icon": "./favicon.png",
   "author": "Alexandre Trieste - Software Engineer",
   "publisher": "Revolution50",
   "repository": {
