--- a/package.json
+++ b/package.json
@@ -29,16 +29,19 @@
     ]
   },
   "scripts": {
-    "vscode:prepublish": "npm run package",
+    "vscode:prepublish": "npm run release",
     "compile": "webpack",
     "watch": "webpack --watch",
     "package": "webpack --mode production --devtool hidden-source-map",
+    "publish": "vsce package && vsce publish",
+    "release": "npm version patch && npm install && npm run package && npm run publish",
     "compile-tests": "tsc -p . --outDir out",
     "watch-tests": "tsc -p . -w --outDir out",
     "pretest": "npm run compile-tests && npm run compile && npm run lint",
     "lint": "eslint src --ext ts",
     "test": "node ./out/test/runTest.js"
-  },
+},
+
   "devDependencies": {
     "@types/vscode": "^1.60.0",
     "@types/glob": "^8.1.0",
