--- a/package.json
+++ b/package.json
@@ -38,8 +38,8 @@
     "pretest": "npm run compile-tests && npm run compile && npm run lint",
     "lint": "eslint src --ext ts",
     "test": "node ./out/test/runTest.js",
-    "pre-release": "npm version patch && npm install && npm run package && vsce package",
-    "release": "vsce publish"
+    "increment-version": "sh increment-version.sh",
+    "release": "npm run increment-version && npm install && npm run package && vsce package && vsce publish"
   },
   "devDependencies": {
     "@types/vscode": "^1.60.0",
