--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "uncomment",
   "displayName": "uncomment",
   "description": "Remove all comments along the code",
-  "version": "1.2.9",
+  "version": "1.3.0",
   "icon": "./favicon.png",
   "author": "Alexandre Trieste - Software Engineer",
   "publisher": "Revolution50",
@@ -40,8 +40,7 @@
     "test": "node ./out/test/runTest.js",
     "increment-version": "sh increment-version.sh",
     "pre-release": "npm run increment-version && npm install && npm run package && vsce package",
-    "release": "npm run pre-release && npm run publish-changes && vsce publish",
-    "publish-changes": "sh publish-changes.sh"
+    "release": "npm run pre-release && vsce publish"
   },
 
   "devDependencies": {
